--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mssql": "^10.0.1",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
